fix for prom detail slider txt align + color pt2

--- a/wp-content/themes/ideum/stylesheets/components/_content.scss
+++ b/wp-content/themes/ideum/stylesheets/components/_content.scss
@@ -285,10 +285,10 @@
 
   }
 
-  .one-column-text.slider { float:none; }
+  .one-column-text.slider { float:none !important; }
 
   .one-column-text.slider, .slider-two-column-text.slider {
-    background-color: $vvv-light-gray;
+    background-color: $vv-light-gray;
     margin: -0px auto 0;
     max-width: 80%;
     padding: 5% 0;
